--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "multicalendario",
+  "name": "josenanodev-react-components-library",
   "version": "0.0.1",
-  "private": true,
   "author": "Jose Carlos Cardenas Martinez",
-  "description": "Componente React multicalendario para manipular fechas en formato de malla",
+  "description": "Libreria de componentes React personales",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Josenanodev/josenanodev-react-components-library"
+  },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "axios": "^0.27.2",
-    "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3",
-    "sweetalert2": "^11.6.16",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4",
-    "xlsx-js-style": "^1.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=80 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "jest --coverage",
     "tsc": "tsc"
   },
@@ -51,12 +49,16 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@babel/preset-typescript": "^7.17.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^28.1.2",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.26",
     "@types/react-test-renderer": "^18.0.0",
+    "babel-cli": "^6.26.0",
     "msw": "^0.49.2"
   },
   "jest": {
