--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "author": "Jose Carlos Cardenas Martinez",
   "description": "Libreria de componentes React personales",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist",
     "README.md"
@@ -13,22 +14,48 @@
     "type": "git",
     "url": "https://github.com/Josenanodev/josenanodev-react-components-library"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
+    "@types/jest": "^28.1.2",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "scripts": {
     "start": "set PORT=80 && react-scripts start",
-    "build": "rm -rf dist && SET NODE_ENV=production & babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build": "rm -rf /dist && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
     "test": "jest --coverage",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -47,19 +74,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-scripts": "5.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@babel/preset-typescript": "^7.17.12",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^28.1.2",
-    "@types/lodash": "^4.14.182",
-    "@types/react": "^18.0.26",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-cli": "^6.26.0",
-    "msw": "^0.49.2"
   },
   "jest": {
     "verbose": true,
