--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "outDir": "dist/esm"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["dist", "node_modules", "src/**/*.test.tsx", "src/**/*.stories.tsx"]
+  "exclude": ["dist", "node_modules", "src/**/*.test.tsx", "src/**/*.test.ts", "src/**/*.stories.tsx"]
 }
