--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "types": ["node"],
     "noImplicitAny": false,
