--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "copy-dts:esm": "copyfiles -u 1 \"src/**/*.d.ts\" dist/esm",
     "copy-css:cjs": "copyfiles -u 1 \"src/**/*.css\" dist/cjs",
     "copy-css:esm": "copyfiles -u 1 \"src/**/*.css\" dist/esm",
-    "chromatic": "npx chromatic --project-token="
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "eslintConfig": {
     "extends": [
