--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -6,9 +6,9 @@ name: "Chromatic"
 # Event for the workflow
 on:
   push:
-    branches-ignore:
+    branches:
       - master
-      - 'releases/**' 
+      - 'release/**' 
 # List of jobs
 jobs:
   chromatic-deployment:
