--- a/package.json
+++ b/package.json
@@ -17,35 +17,37 @@
     "url": "git+https://github.com/Josenanodev/josenanodev-react-components-library.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-typescript": "^7.17.12",
-    "@babel/runtime": "^7.20.7",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/runtime": "^7.22.6",
+    "@storybook/addon-essentials": "^7.0.27",
+    "@storybook/addon-interactions": "^7.0.27",
+    "@storybook/addon-links": "^7.0.27",
+    "@storybook/blocks": "^7.0.27",
+    "@storybook/react": "^7.0.27",
+    "@storybook/react-webpack5": "^7.0.27",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^28.1.2",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.0",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.3.0",
-    "chromatic": "^6.14.0",
+    "babel-loader": "^9.1.3",
+    "chromatic": "^6.19.9",
     "copyfiles": "^2.4.1",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4"
+    "storybook": "^7.0.27",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -53,9 +55,7 @@
     "react-icons": "^4.7.1"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006",
     "build": "rm -rf ./dist && npm run build:esm && npm run build:cjs && npm run copy-dts:cjs  && npm run copy-dts:esm  && npm run copy-css:cjs  && npm run copy-css:esm ",
-    "build-storybook": "build-storybook",
     "test": "jest --coverage",
     "tsc": "tsc",
     "build:esm": "tsc",
@@ -64,7 +64,8 @@
     "copy-dts:esm": "copyfiles -u 1 \"src/**/*.d.ts\" dist/esm",
     "copy-css:cjs": "copyfiles -u 1 \"src/**/*.css\" dist/cjs",
     "copy-css:esm": "copyfiles -u 1 \"src/**/*.css\" dist/esm",
-    "chromatic": "chromatic --exit-zero-on-changes"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
