--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@storybook/addon-essentials": "^7.0.27",
     "@storybook/addon-interactions": "^7.0.27",
     "@storybook/addon-links": "^7.0.27",
+    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.0.27",
     "@storybook/react": "^7.0.27",
     "@storybook/react-webpack5": "^7.0.27",
-    "@storybook/testing-library": "^0.2.0",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -46,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
     "storybook": "^7.0.27",
     "typescript": "^5.1.6"
   },
