--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.6",
-    "@storybook/addon-essentials": "^7.0.27",
-    "@storybook/addon-interactions": "^7.0.27",
-    "@storybook/addon-links": "^7.0.27",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-mdx-gfm": "^7.1.0",
     "@storybook/addon-styling": "^1.3.4",
-    "@storybook/blocks": "^7.0.27",
-    "@storybook/react": "^7.0.27",
-    "@storybook/react-webpack5": "^7.0.27",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/react": "^7.1.0",
+    "@storybook/react-webpack5": "^7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -48,7 +49,7 @@
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
-    "storybook": "^7.0.27",
+    "storybook": "^7.1.0",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
