--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,27 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "strict": true,
+    "target": "ES6",
+    "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "jsx": "react",
-    "module": "ESNext",
-    "declaration": true,
-    "declarationDir": "types",
-    "sourceMap": true,
-    "outDir": "dist",
-    "moduleResolution": "node",
-    "emitDeclarationOnly": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "es2015",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "sourceMap": false,
+    "declaration": true,
+    "types": ["node"],
+    "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "outDir": "dist/esm"
   },
+  "include": ["src/**/*"],
   "exclude": [
     "dist",
     "node_modules",
