--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "josenanodev-react-components-library",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": {
     "name": "Jose Carlos Cardenas Martinez"
   },
@@ -9,9 +9,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Josenanodev/josenanodev-react-components-library.git"
@@ -20,6 +20,10 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.6",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@storybook/addon-essentials": "^7.1.1",
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
@@ -33,23 +37,28 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.15",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^9.1.3",
-    "chromatic": "^6.19.9",
-    "copyfiles": "^2.4.1",
+    "chromatic": "^6.20.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "postcss": "^8.4.27",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.64.0",
+    "rollup": "^3.27.0",
+    "rollup-plugin-dts": "^5.3.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.64.2",
     "storybook": "^7.1.1",
+    "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
@@ -58,17 +67,9 @@
     "react-icons": "^4.7.1"
   },
   "scripts": {
-    "build": "rm -rf ./dist && npm run build:esm && npm run build:cjs && npm run copy-dts:cjs  && npm run copy-dts:esm  && npm run copy-css:cjs  && npm run copy-css:esm  && copyfiles -u 1 \"src/**/*.scss\" dist/cjs  && copyfiles -u 1 \"src/**/*.scss\" dist/esm",
+    "rollup-build-lib": "rollup -c",
     "test": "jest --coverage",
     "tsc": "tsc",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
-    "copy-dts:cjs": "copyfiles -u 1 \"src/**/*.d.ts\" dist/cjs",
-    "copy-dts:esm": "copyfiles -u 1 \"src/**/*.d.ts\" dist/esm",
-    "copy-css:cjs": "copyfiles -u 1 \"src/**/*.css\" dist/cjs",
-    "copy-css:esm": "copyfiles -u 1 \"src/**/*.css\" dist/esm",
-    "copy-scss:cjs": "copyfiles -u 1 \"src/**/*.scss\" dist/cjs",
-    "copy-scss:esm": "copyfiles -u 1 \"src/**/*.scss\" dist/esm",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
