--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "target": "es2016",
     "jsx": "react",
-    "sourceMap": false,
+    "module": "ESNext",
+    "moduleResolution": "node",
     "declaration": true,
-    "types": ["node"],
-    "noImplicitAny": false,
-    "noUnusedLocals": true,
-    "outDir": "dist/esm"
+    "emitDeclarationOnly": true,
+    "outDir": "dist",
+    "declarationDir": "types",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": [
