--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: rm -rf ./dist && npm run build:esm && npm run build:cjs && npm run copy-dts:cjs  && npm run copy-dts:esm  && npm run copy-css:cjs  && npm run copy-css:esm 
+      - run: npm run rollup -c
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_SECRET}}
