--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "josenanodev-react-components-library",
-  "version": "1.1.6",
+  "version": "1.2.0",
   "author": {
     "name": "Jose Carlos Cardenas Martinez"
   },
@@ -46,6 +46,7 @@
     "babel-loader": "^9.1.3",
     "chromatic": "^6.22.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "josenanodev-generic-utils": "^0.0.1",
     "postcss": "^8.4.28",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
