--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^9.1.3",
+    "babel-preset-react-app": "^10.0.1",
     "chromatic": "^6.22.0",
     "eslint-plugin-storybook": "^0.6.13",
     "josenanodev-generic-utils": "^0.0.1",
