--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-preset-react-app": "^10.0.1",
     "chromatic": "^6.22.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.6.2",
     "josenanodev-generic-utils": "^0.0.1",
     "postcss": "^8.4.28",
     "prop-types": "^15.8.1",
