--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chromatic": "^6.22.0",
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "josenanodev-generic-utils": "^0.0.1",
     "postcss": "^8.4.28",
     "prop-types": "^15.8.1",
