--- a/package.json
+++ b/package.json
@@ -32,23 +32,15 @@
     "@storybook/blocks": "^7.3.1",
     "@storybook/react": "^7.3.1",
     "@storybook/react-webpack5": "^7.3.1",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@types/react-test-renderer": "^18.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^9.1.3",
     "babel-preset-react-app": "^10.0.1",
     "chromatic": "^6.22.0",
     "eslint-plugin-storybook": "^0.6.13",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
     "josenanodev-generic-utils": "^0.0.1",
     "postcss": "^8.4.28",
     "prop-types": "^15.8.1",
@@ -71,15 +63,13 @@
   },
   "scripts": {
     "rollup-build-lib": "rollup -c",
-    "test": "jest --coverage",
     "tsc": "tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -93,16 +83,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "jest": {
-    "verbose": true,
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
   },
   "bugs": {
     "url": "https://github.com/Josenanodev/josenanodev-react-components-library/issues"
