--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "josenanodev-react-components-library",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "author": {
     "name": "Jose Carlos Cardenas Martinez"
   },
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.23.2",
     "@rollup/plugin-commonjs": "^25.0.7",
