--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-links": "^8.0.5",
     "@storybook/addon-mdx-gfm": "^8.0.5",
     "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/blocks": "^8.0.5",
     "@storybook/react": "^8.0.5",
     "@storybook/react-webpack5": "^8.0.5",
